--- a/job-prep-backend/pom.xml
+++ b/job-prep-backend/pom.xml
@@ -99,6 +99,17 @@
             <scope>compile</scope>
         </dependency>
         
+        <!-- Spring Security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        
         <!-- Explicit Jakarta Validation API -->
         <dependency>
             <groupId>jakarta.validation</groupId>
