--- a/job-prep-backend/src/main/resources/application.properties
+++ b/job-prep-backend/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 spring.application.name=pathprep-backend
+spring.data.mongodb.username=prasadsawantpvt
+spring.data.mongodb.password=G5XI2e2cZkb0w59f
